# localsend_rust

./: ANDROID_SIGNING_QUICKSTART.md  ANDROID_SIGNING_SETUP.md  FILE_TRANSFER_FIXES.md  README.md  generate-android-keystore.bat  generate-android-keystore.sh  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.cursor/plans/: upgrade_to_full_app_2f1ae5f9.plan.md
.github/: .gitignore
.github/workflows/: README.md  build-release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  discovery.rs  lib.rs  main.rs  server.rs  transfer.rs
src/components/: FileTransferConfirmModal.tsx  TextMessageModal.tsx
src/pages/: Home.tsx  Settings.tsx
