[package]
name = "local-share"
version = "0.1.0"
description = "Local Share - Share files and messages over local network"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "local_share_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["multipart"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "multipart",
    "stream",
    "rustls-tls",
] }
mdns-sd = "0.13"
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.6"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "limit"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1.19"
hostname = "0.4.2"
flume = "0.11"
urlencoding = "2.1"
infer = "0.15"
